#! /usr/bin/env bash
#########################################################################
#									#
# Script ID: libmgec-doc/Makefile.am					#
# Author: Copyright (C) 2017  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0					#
#									#
# Purpose:								#
#	AutoMake script file to generate libmgec-doc project from	#
# source.								#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 21/12/2017	MG	1.0.1	First release.				#
#									#
#########################################################################

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = docs/doxygen
