#########################################################################
#									#
# Script ID: src/prg/c/inc-tmp/Makefile.am				#
# Author: Copyright (C) 2015-2019, 2021  Mark Grant			#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
#	AutoMake script file to produce temporary headers.		#
#									#
# For example. Temporary headers can be used in development by a 	#
# library package to house, modify and use copies of an include file	#
# which is normally part of a -dev package. At the end of development	#
# this, of course, has to be moved back to the -dev package and		#
# released from there.							#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 25/03/2017	MG	1.0.1	First release.				#
# 10/12/2017	MG	1.0.2	Add SPDX license tags to source files.	#
# 02/01/2018	MG	1.0.3	Move to new source directory structure.	#
# 04/08/2018	MG	1.0.4	Add mgebuffer.h as a possible.		#
#				Add mgemessage.h as a possible.		#
# 08/05/2019	MG	1.0.5	Remove shebang.				#
# 03/12/2021	MG	1.0.6	Tighten SPDX tag.			#
#									#
#########################################################################


noinst_HEADERS = $(tmpheaders)

EXTRA_HEADERS = mgebuffer.h mgemessage.h

