#########################################################################
#									#
# Script ID: src/prg/c/lib-tmp/Makefile.am				#
# Author: Copyright (C) 2015-2019, 2021  Mark Grant			#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
#	AutoMake script file to provide AutoTools support for temporary	#
# libraries.								#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 09/06/2017	MG	1.0.0	First release.				#
# 10/12/2017	MG	1.0.1	Add SPDX license tags to source files.	#
# 02/01/2018	MG	1.0.2	Move to new source directory structure.	#
# 08/05/2019	MG	1.0.3	Remove shebang.				#
# 03/12/2021	MG	1.0.4	Tighten SPDX tag.			#
#									#
#########################################################################


EXTRA_DIST = $(srcdir)/.

